...
        <Text
          style={[
            styles.sectionHeader,
            { color: Colors[colorScheme].tabIconDefault },
          ]}
        >
          SUIVI POUR
        </Text>

        {/* Liste des enfants */}
        {children.map((child) => {
          const ageText = calculateAge(child.birthDate);
          const isActive = child.id === activeChild?.id;
...
